# aws-nitro-enclaves-cose

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: encrypt.rs  error.rs  header_map.rs  lib.rs  sign.rs
src/crypto/: crypto_openssl.rs  crypto_ring.rs  kms.rs  mod.rs  openssl.rs  openssl_pkey.rs  parsec.rs  tpm.rs
