[package]
name = "aws-nitro-enclaves-cose"
version = "0.2.0"
authors = ["Petre Eftime <epetre@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["COSE"]
categories = ["cryptography"]
repository = "https://github.com/awslabs/aws-nitro-enclaves-cose"
description = "This library aims to provide a safe Rust implementation of COSE, with COSE Sign1 currently implemented."

[dependencies]
serde_cbor = { version="0.11", features = ["tags"] }
serde_repr = "0.1"
serde_bytes = "0.11"
serde_with = "1.5"
openssl = "0.10"
tss-esapi = { version = "5.1", optional = true }
aws-sdk-kms = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main", package = "aws-sdk-kms", optional = true }
tokio = { version = "1.8", features = ["rt"], optional = true }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = ["key_openssl_pkey"]
key_openssl_pkey = []
key_tpm = ["tss-esapi"]
key_kms = ["aws-sdk-kms", "tokio"]

[dev-dependencies]
tokio = { version = "1.8", features = ["macros"] }
