[package]
name = "aws-nitro-enclaves-cose"
version = "0.5.1"
authors = ["Petre Eftime <epetre@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["COSE"]
categories = ["cryptography"]
repository = "https://github.com/awslabs/aws-nitro-enclaves-cose"
description = "This library aims to provide a safe Rust implementation of COSE, with COSE Sign1 currently implemented."
rust-version = "1.67"

[dependencies]
serde_cbor = { version="0.11", features = ["tags"] }
serde_repr = "0.1"
serde_bytes = { version = "0.11", features = ["std"] }
serde_with = { version = "1.5", default_features = false }
openssl = { version = "0.10", optional = true }
tss-esapi = { version = "6.1", optional = true }
aws-config = { version = "0.56", optional = true }
aws-sdk-kms = { version = "0.31", optional = true }
tokio = { version = "1.20", features = ["rt", "macros"], optional = true }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
hex = "0.4"

[features]
default = ["key_openssl_pkey"]
key_openssl_pkey = ["openssl"]
key_tpm = ["tss-esapi", "openssl"]
key_kms = ["aws-config", "aws-sdk-kms", "tokio", "key_openssl_pkey"]
