[package]
name = "aws-nitro-enclaves-cose"
version = "0.5.2"
authors = ["Petre Eftime <epetre@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["COSE"]
categories = ["cryptography"]
repository = "https://github.com/awslabs/aws-nitro-enclaves-cose"
description = "This library aims to provide a safe Rust implementation of COSE, with COSE Sign1 currently implemented."
rust-version = "1.68"

[dependencies]
serde_cbor = { version="0.11", features = ["tags"] }
serde_repr = "0.1"
serde_bytes = { version = "0.11", features = ["std"] }
serde_with = { version = "3.3" }
openssl = { version = "0.10", optional = true }
tss-esapi = { version = "7.5.1", optional = true }
aws-sdk-kms = { version = "<=1.20", optional = true }
tokio = { version = "1.20", features = ["rt", "macros"], optional = true }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
hex = "0.4"
aws-config = { version = "<=1.1" }
aws-smithy-runtime = { version = "<=1.5.4" }

[features]
default = ["key_openssl_pkey"]
key_openssl_pkey = ["openssl"]
key_tpm = ["tss-esapi", "openssl"]
key_kms = ["aws-sdk-kms", "tokio", "key_openssl_pkey"]
